appId: com.tuvotodecide
---
# Test: Completar flujo de onboarding completo
- launchApp:
    clearState: false
- tapOn: "Open debugger to view warnings."
- assertNotVisible: "Open debugger to view warnings."
- assertVisible: "Aplicación Electoral"
- tapOn: "Saber más "
- assertVisible: "Obtén tu identidad digital soberana"
- tapOn: "Siguiente"
- assertVisible: "Actas electorales inalterables con NFTs"
- tapOn: "Siguiente"
- assertVisible: "Validación abierta, con firma electrónica"
- tapOn: "Siguiente"
- assertVisible: "Transparencia con Blockchain e Inteligencia Artificial"
- tapOn: "Siguiente"
- assertVisible: "Regístrate y contribuye ya!"
- tapOn: "Siguiente"
- assertVisible: "Aplicación Electoral"
